fix startup title/bg flicker

--- a/app/components/style.css
+++ b/app/components/style.css
@@ -5,6 +5,7 @@ body, html {
   overflow: hidden;
   height: 100%;
   width: 100%;
+  background-color: #333;
 }
 
 .smallCol {
@@ -57,6 +58,7 @@ body, html {
   display: flex;
   flex-flow: column;
   height: 100%;
+  background-color: #FFF;
 }
 
 .newButton {
